@startuml Diagrama de Clases - InmoJaen

class Usuario {
    - id: Long
    - nombre: String
    - email: String
    - password: String
    - telefono: String
    - rol: String
    - username: String
    - activo: Boolean
    - anunciosEnVenta: Anuncio[]
    - anunciosFavoritos: Anuncio[]
    + guardarAnuncio()
    + buscarAnuncio()
    + modificarAnuncio()
    + eliminarAnuncio()
    + desactivarAnuncio()
}

class Anuncio {
    - id: Long
    - titulo: String
    - descripcion: String
    - precio: Double
    - superficie: Double
    - habitaciones: Integer
    - banos: Integer
    - direccion: String
    - fechaPublicacion: LocalDate
    - fechaReserva: LocalDate
    - fechaVenta: LocalDate
    - visto: Boolean
    - reservado: Boolean
    - vendido: Boolean
    - usuario: Usuario
    - fotos: String[]
    - activo: Boolean
    + guardarAnuncio()
    + buscarAnuncio()
    + modificarAnuncio()
    + eliminarAnuncio()
    + desactivarAnuncio()
}

enum Rol {
    ADMIN
    USUARIO
    TEMPORAL
}

class RolUsuario {
    - id: Long
    - rol: Rol
    - usuario: Usuario
    + guardarRol()
    + buscarRol()
    + modificarRol()
}

Usuario "1" --> "0..*" Anuncio : Tiene
Anuncio "1" --> "1" Usuario : Pertenece
Usuario "1" --> "1" RolUsuario : Tiene
RolUsuario "1" --> "1" Usuario : Pertenece

RolUsuario "1" --> "1" Rol : Tiene
Rol "1" --> "0..*" RolUsuario : Pertenece

@enduml
